# rag-mcp-server

./: mcp_servers.example.json  pyproject.toml
data/chroma/: chroma.sqlite3
data/html/: BA (Hons) in Communication _ Sunway University.html  BSc (Hons) Information Technology (Computer Networking and Security) _ Sunway University.html  BSc (Hons) Medical Biotechnology _ Sunway University.html  Bachelor (Honours) in Finance _ Sunway University.html  Bachelor of Arts (Honours) Contemporary Music (Audio Technology) _ Sunway University.html  Bachelor of Arts (Honours) Design Communication _ Sunway University.html  Bachelor of Arts (Honours) Digital Film Production _ Sunway University.html  Bachelor of Arts (Honours) Entrepreneurship _ Sunway University.html  Bachelor of Arts (Honours) Music Performance _ Sunway University.html  Bachelor of Arts (Honours) in Advertising and Branding _ Sunway University.html  Bachelor of Arts (Honours) in Architecture _ Sunway University.html  Bachelor of Arts (Honours) in Interior Architecture _ Sunway University.html  Bachelor of Arts (Honours) in Theatre Production _ Sunway University.html  Bachelor of Business Analytics (Honours) _ Sunway University.html  Bachelor of Chemical Engineering with Honours _ Sunway University.html  Bachelor of Civil Engineering with Honours _ Sunway University.html  Bachelor of Nursing (Honours) _ Sunway University.html  (+24 more)
models/: download_models.py
scripts/: audit_overview.py  build_index.py  eval_smoke.py  rebuild_all.sh  refresh_all.py  sync_batch.py  sync_sunway.py
tests/: test_indexer.py  test_schema.py
(+58 files in other folders)
